# agent-gorgon

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  find_tool.py  install.sh  llms.txt  pyproject.toml
.github/workflows/: release.yml
_launch/: LAUNCH-PLAN.md  SHIP-REPORT.md  claim.md  classification.md  fixes.patch  gh-metadata.sh  hygiene-report.md  positioning.md  proposed-edits.md  test-diagnosis.md
_launch/distribution/: AGENTS.md.proposed  CHANGELOG.md.proposed  CONTRIBUTING.md.proposed  README-badges-and-hero.diff  SHIP-REPORT-addendum.md  demo-plan.md  pyproject.toml.proposed  release.sh
_launch/distribution/.github/workflows/: test.yml.proposed
_launch/distribution/awesome-prs/: awesome-agents-pr.md  awesome-claude-code-plugins-pr.md  awesome-claude-code-pr.md
_launch/images/: architecture.mmd  prompts.md
_launch/outreach/: README-outreach.md  blog-post.devto.md  blog-post.md  hn-show.md  linkedin.md  x-thread.md
_launch/outreach/reddit/: r-LocalLLaMA.md  r-MachineLearning.md
_launch/paper/: DECISION.md
converters/: csv2json.py  json2csv.py  json2text.py  text2json.py
docs/: BLUEPRINT.md
hooks/: pre_tool_use_bash.py  stop.py  user_prompt_submit.py
manifests/: _template.yaml  hermes-score.yaml
tests/: conftest.py  test_pre_tool_use_bash.py  test_stop.py  test_user_prompt_submit.py
