[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-gorgon"
version = "0.1.0"
description = "Stop your AI agents from fabricating tool output when a registered tool exists. 3-layer hook defense for Claude Code."
authors = [
  {name = "Rolando Bosch", email = "rbosch@lpci.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
# All imports in hooks/, find_tool.py, and converters/ are stdlib only:
# argparse, csv, datetime, io, json, os, pathlib, re, shutil, subprocess, sys, time, typing
dependencies = []

[project.scripts]
agent-gorgon = "find_tool:main"

[project.urls]
Homepage = "https://github.com/roli-lpci/agent-gorgon"
Repository = "https://github.com/roli-lpci/agent-gorgon"
Issues = "https://github.com/roli-lpci/agent-gorgon/issues"
Documentation = "https://github.com/roli-lpci/agent-gorgon/blob/main/docs/BLUEPRINT.md"
Organization = "https://hermes-labs.ai"

[tool.hatch.build.targets.wheel]
# hooks/, manifests/, and converters/ do not have __init__.py files - they are script collections,
# not importable packages. Hatchling will include them as data. If you want pip-installable
# imports, add __init__.py to each directory before building.
# The CLI entry point (agent-gorgon) calls find_tool:main which is a top-level module.
include = ["find_tool.py", "hooks/*.py", "manifests/*.yaml", "converters/*.py", "install.sh"]
